Edited wiki page through web user interface.

--- a/wiki/WhySalve.wiki
+++ b/wiki/WhySalve.wiki
@@ -1,22 +1,22 @@
 #summary Motivation behind Salve
 #labels Featured,Phase-Requirements,Phase-Design
 
-Salve aims to fix the anemic domain model anti-pattern present in most modern java web-applications. 
+Salve aims to fix the anemic domain model anti-pattern([http://www.martinfowler.com/bliki/AnemicDomainModel.html 1]) ([http://www.theserverside.com/patterns/thread.tss?thread_id=31010#172016 2]) present in most modern java web-applications. 
 
-With technologies like ORM we are able to model domain layer objects that contain application data, but we are unable to enrich them with behavior to act upon that data. The behavior is factored out into stateless singleton objects called services. This is done for the following reasons:
+With technologies like ORM we are able to model domain layer objects that contain application data, but we are unable to enrich them with behavior to act upon that data - the basic principle of OOP. The behavior is factored out into stateless singleton objects called services. This is done for the following reasons:
   * *Dependency Management*: Objects modeled by the domain layer depend on services provided by other parts of the application, such as jms/email/orm/database. It is much easier to provide these dependencies to an object whose lifecycle is managed by an IOC container rather then to one whose lifecycle is handled by the ORM framework or by the user using the `new` operator.
   * *Instance Weight*: Domain layer objects need to be lightweight because they are often passed around between application layers/cluster nodes, and sometimes stored by the user for later reference. This often entails having the ability to be serializable which means these objects cannot carry references to heavy objects that would significantly increase their serialized-size, or carry references to objects that are not themselves serializable or should not be serialized - such as singletons.
   * *Testability*: The two concerns above can be addressed by allowing objects to lookup their dependencies inside methods (rather then keeping them as fields) via some sort of a static lookup. However this makes it more difficult to test the object because its dependencies are harder to discover and mocks are harder to pass in - compared to objects that use setter methods to set their dependencies.
 
 === How Salve Fixes the Problem ===
-The ideal solution would allow domain layer objects to be lightweight, contain business logic, and have dependency injection that works under any lifecycle. One way to achieve this would be to allow the developer to specify dependencies as fields, and then rewrite the bytecode removing those fields from the class and replacing access to them via a static lookup into whatever IOC container/dependency management system the application is using when the application is deployed. Such a scheme would allow setter methods on those objects to set dependencies when the objects are under test and yet remove the weight of those fields when objects are deployed. This is how Salve works. Lets take a look at a quick example:
+The ideal solution would allow domain layer objects to be lightweight, contain business logic, and have dependency injection that works under any lifecycle. One way to achieve this would be to allow the developer to specify dependencies as fields, and then rewrite the bytecode to remove those fields from the class and replacing access to them via a static lookup into whatever IOC container/dependency management system the application is using when the application is deployed. This is how Salve works. Lets take a look at a quick example:
 
 {{{
 // This is a JPA entity
 @javax.persistence.Entity public class Account {
 
   // this is a dependency we wish Salve to instrument
-  @javax.persistence.Transient
+  // notice no need for @Transient because the field will be removed
   @salve.Dependency
   private EmailService email;
 
@@ -27,7 +27,7 @@ The ideal solution would allow domain layer objects to be lightweight, contain b
   // this is a JPA field
   private float balance;
 
-  // setters and getters for email, balance, and id fields
+  // setters and getters
 
   public void withdraw(float amount) {
     if (amount>balance) {
@@ -45,7 +45,7 @@ When the bytecode of Account class is processed by Salve, it will look like this
 @javax.persistence.Entity public class Account {
 
   // added by salve to facilitate lookup of email service dependency
-  public static final salve.depend.Key _key_email=new salve.depend.Key(...);
+  private static final salve.depend.Key _salve_key$email=new salve.depend.Key(...);
 
   // email field is removed
 
@@ -54,15 +54,12 @@ When the bytecode of Account class is processed by Salve, it will look like this
 
   private float balance;
 
-  // setters and getters for email, balance, and id fields
-
-  // salve will rewrite field write in setter with a 
-  // noop and a WARN log message
+  // setters and getters
 
   public void withdraw(float amount) {
-    // dependencies are looked up only when referenced in the method
-    // dependencies are looked up lazily
-    EmailService _email=salve.depend.DependencyLibrary.lookup(_key_email);
+    // dependencies are looked up lazily and cached in a local var
+    // there is also a cache in salve that speeds up multiple repated lookups
+    EmailService _email=salve.depend.DependencyLibrary.lookup(_salve_key$email);
 
     if (amount>balance) {
       _email.sendOverdrawMessage(this);
@@ -74,9 +71,6 @@ When the bytecode of Account class is processed by Salve, it will look like this
 
 Lets take a look at the changes Salve made to the code:
   * `EmailService email` field is removed - removing a reference to a heavy service object and making `Account` lightweight
-  * Writes to the `email` field are replaced with a noop and a WARN message in the logs. This can be configured to throw an exception instead
-  * Reads of the `email` field are replaced with a static lookup into a method-local variable. For instructions on configuring Salve's ConfiguringDependencyLibrary lookups see [ConfiguringDependencyLibrary] page.
+  * Access to the `email` field is replaced with a static lookup into a method-local variable. For instructions on configuring Salve's ConfiguringDependencyLibrary lookups see [ConfiguringDependencyLibrary] page.
 
-Account object is fully testable when its bytecode is not instrumented by Salve, but lightweight, serializable, and injectable when it is.
-
-For instructions on how to configure Salve code instrumentation see the [ConfiguringInstrumentation] page.
+For instructions on how to setup Salve in your project see the GettingStarted page
