Edited wiki page through web user interface.

--- a/wiki/ConfiguringInstrumentation.wiki
+++ b/wiki/ConfiguringInstrumentation.wiki
@@ -41,6 +41,22 @@ Add the following lines to pom.xml
 
 {{{
 <!-- fragment to demonstrate invocation of the maven plugin -->
+<dependencies>
+  <dependency>
+    <!-- salve dependency injection -->
+    <groupId>salve</groupId>
+    <artifactId>salve-depend</artifactId>
+    <version>1.0</version>
+   </dependency>
+  <dependency>
+    <!-- salve dependency instrumentor -->
+    <groupId>salve</groupId>
+    <artifactId>salve-depend-inst</artifactId>
+    <version>1.0</version>
+    <!-- no need to include this in final packaging -->
+    <scope>provided</scope>
+  </dependency>
+</dependencies>
 
 <build>
   <plugins>
