--- a/wiki/SpringTransactionManager.wiki
+++ b/wiki/SpringTransactionManager.wiki
@@ -14,7 +14,22 @@ See the bottom of the page for pom.xml and salve.xml samples
 
 == Spring Integration ==
 
-=== Short Verson ===
+== Salve 1.2 and Later ==
+
+{{{
+<beans>
+  <!-- integrate spring context with dependency library -->
+  <bean class="salve.depend.spring.SalveConfigurator"/>
+
+  <!-- integrate transactional instrumentor with txn manager-->
+  <bean class="salve.depend.spring.txn.SpringTransactionManager">
+    <property name="transactionManager" ref="transactionManager"/>
+  </bean>
+</beans>	
+}}}	
+
+
+=== Short Verson in Salve 1.1 ===
 
 {{{
 <beans>
@@ -29,7 +44,7 @@ See the bottom of the page for pom.xml and salve.xml samples
 </beans>
 }}}
 
-=== Long Version ===
+=== Long Version in Salve 1.1 ===
 (without using tx:annotation-driven tag)
 
 {{{
