--- a/wiki/NavigationPane.wiki
+++ b/wiki/NavigationPane.wiki
@@ -1,15 +1,16 @@
   * Background
     * [WhySalve Why Salve]
     * [ComparisonWithSpringsConfigurable Comparison to Spring's @Configurable]
-  * Configuration
-    * [ConfiguringDependencyLibrary Dependency lookups]
-    * [ConfiguringInstrumentation Instrumentation]
-  * Extensions
-    * Transactions
-      * [SpringTransactionManager Spring's @Transactional]
-      * [AnnotatedTransactionManager @Transactional without Spring]
-    * [DesignByContract Contract Module]
-  * Misc
-    * [BuildingSalve Salve From Source]
-    * [Using_Salve_with_Java_14 Salve with Java 1.4]
-    * [SalveWIthGuice Salve with Guice Example]
+  * Salve 1.x
+    * Configuration
+      * [ConfiguringDependencyLibrary Dependency lookups]
+      * [ConfiguringInstrumentation Instrumentation]
+    * Extensions
+      * Transactions
+        * [SpringTransactionManager Spring's @Transactional]
+        * [AnnotatedTransactionManager @Transactional without Spring]
+      * [DesignByContract Contract Module]
+    * Misc
+      * [BuildingSalve Salve From Source]
+      * [Using_Salve_with_Java_14 Salve with Java 1.4]
+      * [SalveWIthGuice Salve with Guice Example]
