--- a/wiki/NavigationPane.wiki
+++ b/wiki/NavigationPane.wiki
@@ -18,6 +18,7 @@
     * Dependency Lookups
       * [ConfiguringDependencyLibrary2 Setup]
       * [ConfiguringInstrumentation2 Instrumentation]
+    * [InstrumentationSetup2 Instrumentation Setup]
   * Misc
     * [BuildingSalve Salve From Source]
     * [Using_Salve_with_Java_14 Salve with Java 1.4]
