--- a/wiki/CreatingAspects2.wiki
+++ b/wiki/CreatingAspects2.wiki
@@ -1,7 +1,7 @@
 *This page is a work in progress...*
 
 == Prerequesites ==
-`salve-aop` and `salve-aop-inst` jars and their dependencies on the classpath.
+*salve-aop* and *salve-aop-inst* jars and their dependencies on the classpath.
 
 === Maven ===
 {{{
@@ -56,5 +56,24 @@ public class Service
 }
 }}}
 
-== Instrumenting the Bytecode ==
-See the [InstrumentationSetup2 Instrumentation Setup] page.
+== Configuration ==
+You need a small configuration file telling salve which instrumentors to run. This file is kept in META-INF/salve.xml, and usually looks like this:
+
+{{{
+<config>
+  <packages>
+    <package>
+      <name>com.mycompany.myproject</name>
+      <instrumentors>
+        <salve.aop.inst.AopInstrumentor>
+      </instrumentors>
+    </package>
+  </packages>
+</config>
+}}}
+
+Replace <com.mycompany.myproject> with the base package name of your application. The `<packages>` element can contain multiple `<package>` elements.
+
+== Instrumentation ==
+
+See the [InstrumentationSetup2 Instrumentation Setup] page for instructions on how to setup bytecode instrumentation.
